--- a/dataViz.Rmd
+++ b/dataViz.Rmd
@@ -1,4 +1,4 @@
-```{r}
+```{r include=FALSE}
 library(tidyverse)
 library(tidymodels)
 library(lubridate)
@@ -16,7 +16,7 @@ options(ggrepel.max.overlaps = Inf)
 Read data
 
 ```{r}
-df <- read_csv("C:\\Users\\omarl\\OneDrive\\Escritorio\\MVA-Project\\df_preprocessed.csv")
+df <- read_csv("df_preprocessed.csv")
 
 numeric_cols <- df %>%
   select_if(is.numeric)
@@ -239,6 +239,360 @@ itemFrequencyPlot(transactions(df_mca), topN = 20,
                   type = "relative",
                   ylab = "Item Frequency (Relative)")
 ```
+
+
+## MFA
+
+-   Lifter attributes
+    -   "Country", "Sex"
+    -   "Age", "BodyweightKg"
+-   Lifter equipment
+    -   "Equipment"
+-   Lifter results
+    -   "Squat1Kg", "Squat2Kg", "Squat3Kg"
+    -   "Bench1Kg", "Bench2Kg", "Bench3Kg"
+    -   "Deadlift1Kg", "Deadlift2Kg", "Deadlift3Kg"
+    -   "TotalKg"
+    -   "Goodlift"
+    -   "WeightTriedSquat1Kg", "WeightTriedSquat2Kg", "WeightTriedSquat3Kg",
+    -   "WeightTriedBench1Kg", "WeightTriedBench2Kg", "WeightTriedBench3Kg"
+    -   "WeightTriedDeadlift1Kg", "WeightTriedDeadlift2Kg", "WeightTriedDeadlift3Kg"
+    -   "LiftedSquat1Kg?", "LiftedSquat2Kg?", "LiftedSquat3Kg?"
+    -   "LiftedBench1Kg?", "LiftedBench2Kg?", "LiftedBench3Kg?"
+    -   "LiftedDeadlift1Kg?", "LiftedDeadlift2Kg?", "LiftedDeadlift3Kg?"
+    -   "Squat", "SquatInc1", "SquatInc2"
+    -   "Bench", "BenchInc1", "BenchInc2"
+    -   "Deadlift", "DeadliftInc1", "DeadliftInc2"
+    -   "Place"
+-   Competition
+    -   "Event", "Federation", "MeetName", "MeetCountry", "Tested"
+    -   "Date"
+
+```{r}
+# Set seed for sampling
+set.seed(0)
+
+# Sample around 10%
+# sam <- sample(1:nrow(df), 30000)
+
+df_mfa <- df  # [sam,]
+
+# Date
+df_mfa$Date <- as.numeric(format(as.Date(df_mfa$Date), "%Y%m%d"))
+
+# Preparation
+df_mfa <- df_mfa %>%
+  mutate(across(ends_with("?"), ~factor(.x, labels = c("Not lifted", "Lifted")))) %>%
+  select(Sex, Equipment, Tested, Federation, Place, Country, ends_with("?"), where(is.numeric)) %>%
+  mutate(across(1:6, ~factor(.x))) %>%
+  mutate_if(is.numeric, abs) %>%
+  cbind(num_to_cat)  # [sam,]
+
+df_mfa$Place <- factor(df_mfa$Place, order = TRUE, levels=c(1:10, "Other", "DQ"))
+
+# Country: Transform to top 10 and Other
+top_10_names <- names(sort(table(df_mfa$Country), decreasing = T)[1:10])
+levels(df_mfa$Country) <- c(levels(df_mfa$Country), "Other")
+df_mfa[!(df_mfa$Country %in% top_10_names),]$Country <- "Other"
+df_mfa$Country <- droplevels(df_mfa$Country)
+```
+
+```{r}
+# MFA
+groups <- list(
+  # "Lifter attributes"=list("n", c("Sex", "Age_class", "BodyWeight_class")),
+  # "Lifter attributes"=list("n", c("Sex", "Country")),
+  "Lifter attributes"=list("n", c("Sex")),
+  "Lifter condition"=list("s", c("Age", "BodyweightKg")),
+  #"Lifter equipment"=list("n", c("Equipment")),
+  "Lift tried"=list("s", c("Squat", "SquatInc1", "SquatInc2",
+                           "Bench", "BenchInc1", "BenchInc2",
+                           "Deadlift", "DeadliftInc1", "DeadliftInc2")),
+  "Lift quality"=list("n", c("LiftedSquat1Kg?", "LiftedSquat2Kg?", "LiftedSquat3Kg?",
+                             "LiftedBench1Kg?", "LiftedBench2Kg?", "LiftedBench3Kg?",
+                             "LiftedDeadlift1Kg?", "LiftedDeadlift2Kg?", "LiftedDeadlift3Kg?")),
+  # Only using attempts 1 and 2
+  # "Lift tried"=list("s", c("Squat", "SquatInc1",
+  #                          "Bench", "BenchInc1",
+  #                          "Deadlift", "DeadliftInc1")),
+  # "Lift quality"=list("n", c("LiftedSquat1Kg?", "LiftedSquat2Kg?",
+  #                            "LiftedBench1Kg?", "LiftedBench2Kg?",
+  #                            "LiftedDeadlift1Kg?", "LiftedDeadlift2Kg?")),
+  # Only using attempt 1
+  # "Lift tried"=list("s", c("Squat", "Bench", "Deadlift")),
+  # "Lift quality"=list("n", c("LiftedSquat1Kg?", "LiftedBench1Kg?", "LiftedDeadlift1Kg?")),
+  # "Competition"=list("n", c("Federation", "Tested")),
+  # "Date"=list("s", c("Date")),
+  "Place"=list("n", c("Place")))
+
+group_nums <- unname(sapply(groups, function(g) length(unlist(g[2]))))
+group_types <- unname(sapply(groups, function(g) unlist(g[1])))
+group_vars <- unname(unlist(sapply(groups, function(g) unlist(g[2]))))
+group_names <- names(groups)
+
+df_mfa <- df_mfa[, group_vars]
+
+res.mfa <- MFA(df_mfa,
+               group = group_nums,
+               type = group_types,
+               name.group = group_names,
+               num.group.sup = c(1),
+               graph = FALSE)
+
+head(get_eigenvalue(res.mfa), 20)
+res.mfa$inertia.ratio
+fviz_screeplot(res.mfa)
+```
+
+```{r}
+fviz_contrib(res.mfa, "group", axes = 1)
+fviz_contrib(res.mfa, "group", axes = 2)
+fviz_contrib(res.mfa, "group", axes = 3)
+fviz_contrib(res.mfa, "group", axes = 4)
+```
+```{r}
+grad_col <- c("#00AFBB", "#E7B800", "#FC4E07")
+```
+
+
+```{r}
+#dimdesc(res.mfa, axes = 1:2)
+
+fviz_mfa_var(
+  res.mfa, choice = "group", axes = c(1, 2),
+  col.var = "contrib", gradient.cols = grad_col)
+fviz_mfa_var(
+  res.mfa, choice = "group", axes = c(2, 3),
+  col.var = "contrib", gradient.cols = grad_col)
+fviz_mfa_var(
+  res.mfa, choice = "group", axes = c(3, 4),
+  col.var = "contrib", gradient.cols = grad_col)
+```
+
+```{r}
+fviz_contrib(res.mfa, choice = "quanti.var", axes = 1, top = 10)
+fviz_contrib(res.mfa, choice = "quali.var", axes = 1, top = 10)
+fviz_contrib(res.mfa, choice = "quanti.var", axes = 2, top = 10)
+fviz_contrib(res.mfa, choice = "quali.var", axes = 2, top = 10)
+fviz_contrib(res.mfa, choice = "quanti.var", axes = 3, top = 10)
+fviz_contrib(res.mfa, choice = "quali.var", axes = 3, top = 10)
+fviz_contrib(res.mfa, choice = "quanti.var", axes = 4, top = 10)
+fviz_contrib(res.mfa, choice = "quali.var", axes = 4, top = 10)
+```
+
+```{r}
+axes <- c(1, 2)
+fviz_mfa_var(res.mfa, "quanti.var", axes = axes,
+             select.var = list(cos2 = 20),
+             col.var = "contrib", gradient.cols = grad_col, repel = TRUE)
+fviz_mfa_var(res.mfa, "quali.var", axes = axes,
+             select.var = list(cos2 = 20),
+             col.var = "contrib", gradient.cols = grad_col, repel = TRUE)
+axes <- c(2, 3)
+fviz_mfa_var(res.mfa, "quanti.var", axes = axes,
+             select.var = list(cos2 = 20),
+             col.var = "contrib", gradient.cols = grad_col, repel = TRUE)
+fviz_mfa_var(res.mfa, "quali.var", axes = axes,
+             select.var = list(cos2 = 20),
+             col.var = "contrib", gradient.cols = grad_col, repel = TRUE)
+axes <- c(3, 4)
+fviz_mfa_var(res.mfa, "quanti.var", axes = axes,
+             select.var = list(cos2 = 20),
+             col.var = "contrib", gradient.cols = grad_col, repel = TRUE)
+fviz_mfa_var(res.mfa, "quali.var", axes = axes,
+             select.var = list(cos2 = 20),
+             col.var = "contrib", gradient.cols = grad_col, repel = TRUE)
+```
+
+```{r}
+fviz_mfa_axes(res.mfa, axes = c(2, 3), repel=T)
+```
+
+```{r}
+smpl <- sample(rownames(res.mfa$ind$coord), 30000)
+
+fviz_mfa_ind(
+  res.mfa,
+  axes = c(1, 2),
+  habillage = "Place",
+  addEllipses = TRUE,
+  select.ind = list(name=smpl),
+  geom = c("point"),
+  col.ind = "black",
+  alpha.ind = 0.3,
+  repel = T)
+fviz_mfa_ind(
+  res.mfa,
+  axes = c(2, 3),
+  habillage = "Place",
+  addEllipses = TRUE,
+  select.ind = list(name=smpl),
+  geom = c("point"),
+  col.ind = "black",
+  alpha.ind = 0.3,
+  repel = T)
+fviz_mfa_ind(
+  res.mfa,
+  axes = c(2, 4),
+  habillage = "Place",
+  addEllipses = TRUE,
+  select.ind = list(name=smpl),
+  geom = c("point"),
+  col.ind = "black",
+  alpha.ind = 0.3,
+  repel = T)
+```
+```{r}
+val <- 2.2
+cond <- res.mfa$ind$coord[,3] > val-0.2 & res.mfa$ind$coord[,3] < val+0.2
+summary(df_mfa[rownames(res.mfa$ind$coord)[cond],])
+```
+
+
+```{r}
+smpl <- sample(rownames(res.mfa$ind$coord), 30000)
+
+ds <- c(3, 2)
+
+fviz_mfa_ind(
+  res.mfa,
+  axes = ds,
+  habillage = "LiftedSquat1Kg?",
+  addEllipses = T,
+  select.ind = list(name=smpl),
+  geom = c("point"),
+  col.ind = "black",
+  pointsize = 1,
+  alpha.ind = 0.3,
+  repel = T)
+fviz_mfa_ind(
+  res.mfa,
+  axes = ds,
+  habillage = "LiftedBench1Kg?",
+  addEllipses = T,
+  select.ind = list(name=smpl),
+  geom = c("point"),
+  col.ind = "black",
+  pointsize = 1,
+  alpha.ind = 0.3,
+  repel = T)
+fviz_mfa_ind(
+  res.mfa,
+  axes = ds,
+  habillage = "LiftedDeadlift1Kg?",
+  addEllipses = T,
+  select.ind = list(name=smpl),
+  geom = c("point"),
+  col.ind = "black",
+  pointsize = 1,
+  alpha.ind = 0.3,
+  repel = T)
+```
+
+```{r}
+smpl <- sample(rownames(res.mfa$ind$coord), 30000)
+
+ds <- c(3, 2)
+
+fviz_mfa_ind(
+  res.mfa,
+  axes = ds,
+  habillage = "LiftedSquat1Kg?",
+  addEllipses = T,
+  select.ind = list(name=smpl),
+  geom = c("point"),
+  col.ind = "black",
+  pointsize = 1,
+  alpha.ind = 0.3,
+  repel = T)
+fviz_mfa_ind(
+  res.mfa,
+  axes = ds,
+  habillage = "LiftedSquat2Kg?",
+  addEllipses = T,
+  select.ind = list(name=smpl),
+  geom = c("point"),
+  col.ind = "black",
+  pointsize = 1,
+  alpha.ind = 0.3,
+  repel = T)
+fviz_mfa_ind(
+  res.mfa,
+  axes = ds,
+  habillage = "LiftedSquat3Kg?",
+  addEllipses = T,
+  select.ind = list(name=smpl),
+  geom = c("point"),
+  col.ind = "black",
+  pointsize = 1,
+  alpha.ind = 0.3,
+  repel = T)
+```
+
+
+```{r}
+dir <- (
+  res.mfa$quali.var$coord["LiftedSquat1Kg?_Not lifted",] +
+  res.mfa$quali.var$coord["LiftedBench1Kg?_Not lifted",] +
+  res.mfa$quali.var$coord["LiftedDeadlift1Kg?_Not lifted",] +
+  res.mfa$quali.var$coord["LiftedSquat2Kg?_Not lifted",] +
+  res.mfa$quali.var$coord["LiftedBench2Kg?_Not lifted",] +
+  res.mfa$quali.var$coord["LiftedDeadlift2Kg?_Not lifted",] +
+  res.mfa$quali.var$coord["LiftedSquat3Kg?_Not lifted",] +
+  res.mfa$quali.var$coord["LiftedBench3Kg?_Not lifted",] +
+  res.mfa$quali.var$coord["LiftedDeadlift3Kg?_Not lifted",]
+)
+
+dir <- dir / sqrt(sum(dir^2))
+
+proj <- res.mfa$ind$coord %*% dir
+
+summary(df_mfa[rownames(res.mfa$ind$coord)[proj > -5 & proj <= 0.1],])
+```
+
+
+```{r}
+smpl <- sample(rownames(res.mfa$ind$coord), 30000)
+
+fviz_ellipses(res.mfa,
+              axes = c(1, 2),
+              c("LiftedSquat1Kg?", "LiftedBench1Kg?", "LiftedDeadlift1Kg?"),
+              select.ind = list(name=smpl),
+              geom = c("point"),
+              repel = TRUE)
+fviz_ellipses(res.mfa,
+              axes = c(2, 4),
+              c("LiftedSquat1Kg?", "LiftedBench1Kg?", "LiftedDeadlift1Kg?"),
+              select.ind = list(name=smpl),
+              geom = c("point"),
+              repel = TRUE)
+```
+
+
+```{r}
+library(plot3D)
+library(plot3Drgl)
+
+ds <- c(2, 3, 4)
+
+# Individuals
+smpl <- sample(rownames(res.mfa$ind$coord), 30000)
+px <- res.mfa$ind$coord[smpl,ds[1]]
+py <- res.mfa$ind$coord[smpl,ds[2]]
+pz <- res.mfa$ind$coord[smpl,ds[3]]
+scatter3D(px, py, pz, colvar = proj[smpl,], pch = 20, cex = 0.5, bty = "n")
+
+# Variables
+zeros <- rep(0, nrow(res.mfa$quali.var$coord))
+ax <- res.mfa$quali.var$coord[,ds[1]]
+ay <- res.mfa$quali.var$coord[,ds[2]]
+az <- res.mfa$quali.var$coord[,ds[3]]
+arrows3D(zeros, zeros, zeros, ax, ay, az, add=T, bty = "n")
+text3D(ax, ay, az, rownames(res.mfa$quali.var$coord), add=T, bty = "n")
+
+plotrgl()
+```
+
 
 -   Association Rules
 
